# katamari

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: err.rs  fetch.rs  main.rs  opt.rs  server.rs  url.rs
src/fetch/: date.rs  extract.rs
src/fetch/extract/: tests.rs
src/server/: index.rs  routes.rs
