[package]
name = "katamari"
version = "0.6.0"
description = "Aggregate RSS and friends."
edition = "2021"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "http2", "tokio", "tracing"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
feed-rs = "2"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["native-tokio", "http1", "http2", "tls12", "logging", "ring"] }
hyper-util = { version = "0.1", features = ["client"] }
mediatype = "0.19"
quick-xml = { version = "0.36", features = ["escape-html"] }
thiserror = "1"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["compression-br", "trace"] }
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = "0.3"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
